# Remote-console

./: CMakeLists.txt  README.md
Client/: CMakeLists.txt  main.cpp  sync_tcp_client.cpp  sync_tcp_client.hpp
Server/: CMakeLists.txt  client_session.cpp  client_session.hpp  main.cpp  sync_tcp_server.cpp  sync_tcp_server.hpp  talk_to_client.cpp  talk_to_client.hpp  win_process.cpp  win_process.hpp
